ansible/objects/01-namespace-blog.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  annotations:
    argocd.argoproj.io/managed-by: openshift-gitops
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: blog
