ansible/objects/namespace-webportal.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webportal
  annotations:
    argocd.argoproj.io/managed-by: openshift-gitops
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: webportal
