ansible/objects/02-service-blog.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: svc-blog
  namespace: blog
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: blog
