ansible/objects/service-webportal.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: svc-webportal
  namespace: webportal
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: webportal
