ansible/objects/03-route-blog.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: blog
  namespace: blog
spec:
  path: /
  to:
    kind: Service
    name: svc-blog
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
